[r=andreserl][bug=1445430][author=ricgard] Adding correct spacing to the maas logo.

--- a/src/maasserver/static/scss/maas/layout/_headers.scss
+++ b/src/maasserver/static/scss/maas/layout/_headers.scss
@@ -24,6 +24,10 @@ header.banner {
     position: fixed;
     top: 0;
 
+    .logo {
+      padding-left: 15px;
+    }
+    
     nav.nav-primary {
         border-bottom: none;
     }
